--- a/index-template.html
+++ b/index-template.html
@@ -8,12 +8,17 @@
     <meta name="msapplication-tap-highlight" content="no">
 </head>
 <body>
-<script src="/node_modules/systemjs/dist/system-polyfills.js"></script>
-<script src="/node_modules/reflect-metadata/Reflect.js"></script>
-<script src="/node_modules/es6-shim/es6-shim.min.js"></script>
-<script src="/node_modules/zone.js/dist/zone.js"></script>
-<script src="/node_modules/systemjs/dist/system.src.js"></script>
-<script src="system.config.js"></script>
+<!-- inject:head-develop:js -->
+<!-- endinject -->
+<!-- inject:head-rel-static:js -->
+<!-- endinject -->
+<script>
+     System.config(
+         <!-- inject: ./system.config.json-->
+     );
+</script>
+<!-- inject:head-rel-deps:js -->
+<!-- endinject -->
 <!-- this Ionic's root component and where the app will load -->
 <script>
     System.import('app/main').then(null, console.error.bind(console));
